# 1c-ai-workbench

./: .PSScriptAnalyzerSettings.psd1  .editorconfig  .gitattributes  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  AI_RULES.md  AUTHORS.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  REUSE.toml  SECURITY.md  START_HERE.md  START_HERE.ps1  conftest.py  opencode.jsonc  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
.github/workflows/: ci.yml  codeql.yml  release.yml
configs/: README_MCP_CONFIGS.md  claude-desktop-mcp.json  external-client.env.example  install-profiles.json  integration-packs.json  opencode-mcp.jsonc  risk-rules-schema.json  risk-rules.json  security-policy.example.json  vscode-mcp.json
demo-answers/: golden_answers_summary.md
demo-questions/: expected_answer_format.md  questions_1c_lead.md  questions_basic.md  questions_developer_workflow.md  questions_partner_demo.md
demo-showcase/: DEMO_ANSWERS_STANDARD.md  README_DEMO.md  index.html
docs/: API_KEY_SETUP.md  COMMERCIAL.md  DEMO_RUNBOOK_SIMPLE.md  E2E_SMOKE_PIPELINE.md  FIRST_10_MINUTES.md  GO_READINESS_SIMPLE.md  INSTALL_PROFILES.md  LATER_mcp-1c.md  LIVE_1C_BRIDGE_MVP_PLAN.md  MCP_CONTEXT_INSPECTOR.md  MCP_SETUP_ASSISTANT.md  OPENCODE_SETUP_RU.md  PILOT_OVERVIEW.md  RECOVERY.md  SECURITY_OVERVIEW.md  TECHNICAL_SETUP.md  TROUBLESHOOTING_WINDOWS.md  WINDOWS_EXE_INSTALLER.md  cc-1c-skills-analysis.md
docs/adr/: 001-skills-bridge-mcp.md  002-ibcmd-bridge-live-mode.md  003-prompt-gallery-mcp.md  004-workbench-auto-detection.md  005-tauri-resource-embedding.md
docs/contributing/: linting.md
docs/legal/: BORROWING_MAP.md  README.md
installer/: 1c-ai-workbench.iss
prompts/: explain-module.md  find-object.md  review-bsl.md  trace-flow.md
rules/: catalogs.md  common-modules.md  documents.md  forms.md  queries.md  registers.md  reports.md
scripts/: 01_check_env.ps1  02_clone_repos.ps1  03_build_bsl_indexer.ps1  04_index_1c_dump.ps1  05_run_mcp_server.ps1  06_healthcheck.ps1  07_clean_generated.ps1  08_launch_1c_training.ps1  09_dump_ut_demo_config.ps1  09_generate_repo_map.ps1  10_index_ut_demo_dump.ps1  10_risk_scan.ps1  11_explain_module.ps1  11_open_demo_showcase.ps1  13_check_bsl_quality_pack.ps1  14_check_testing_pack.ps1  15_check_review_pack.ps1  16_check_skills_bridge.ps1  17_check_ibcmd_bridge.ps1  18_check_prompt_gallery.ps1  19_build_windows_installer.ps1  20_check_corporate_mode.ps1  21_export_mcp_context.ps1  22_run_e2e_smoke.ps1  fix-line-lengths.py
tools/: SUBTREE-ORIGINAL-SHAS.txt  SUBTREE.md  apply-vendor-patches.ps1
tools/cockpit-app/src-tauri/: Cargo.toml  tauri.conf.json
tools/cockpit-app/src-tauri/capabilities/: default.json
tools/cockpit-app/src-tauri/icons/: .gitkeep  README.md  icon.icns
tools/cockpit-app/src-tauri/src/: commands.rs  config.rs  embedded.rs  lib.rs  llm.rs  main.rs  mcp.rs
tools/cockpit-app/src-tauri/tests/: embedded_tests.rs
tools/code-index-mcp/: .gitignore  CHANGELOG.md  CHANGELOG_EN.md  Cargo.toml  LICENSE  README.md  README_RU.md  server.json
tools/code-index-mcp/.github/workflows/: publish-registry.yml  release.yml
tools/code-index-mcp/crates/bsl-extension/: Cargo.toml
tools/code-index-mcp/crates/bsl-extension/src/: code_usages.rs  index_extras.rs  lib.rs  module_constants.rs  processor.rs  schema.rs  terms.rs
tools/code-index-mcp/crates/bsl-extension/src/enrichment/: batch.rs  cli.rs  client.rs  mod.rs  prompt.rs  signature.rs
tools/code-index-mcp/crates/bsl-extension/src/tools/: bsl_sql.rs  find_data_path.rs  find_path_bsl.rs  find_references.rs  get_data_links.rs  get_event_subscriptions.rs  get_form_handlers.rs  get_object_profile.rs  get_object_structure.rs  get_register_writers.rs  mod.rs  search_terms.rs
tools/code-index-mcp/crates/bsl-extension/src/xml/: config_dump_info.rs  configuration.rs  edt_mdo.rs  event_subscriptions.rs  forms.rs  metadata_refs.rs  mod.rs  object_attributes.rs  object_uuid.rs
tools/code-index-mcp/crates/bsl-extension/tests/: tools_integration.rs
tools/code-index-mcp/crates/bsl-indexer/: Cargo.toml
tools/code-index-mcp/crates/bsl-indexer/src/: main.rs
tools/code-index-mcp/crates/code-index/: Cargo.toml
tools/code-index-mcp/crates/code-index-core/: Cargo.toml
tools/code-index-mcp/crates/code-index-core/benches/: parse_benchmark.rs
tools/code-index-mcp/crates/code-index-core/src/: cli.rs  lib.rs  serve_cache.rs  serve_dedup.rs  watcher.rs
tools/code-index-mcp/crates/code-index-core/src/daemon_core/: cache_client.rs  client.rs  commands.rs  config.rs  ipc.rs  language_detect.rs  lock.rs  mod.rs  paths.rs  runner.rs  server.rs  state.rs  worker.rs
tools/code-index-mcp/crates/code-index-core/src/extension/: context.rs  mod.rs  processor.rs  tool.rs
tools/code-index-mcp/crates/code-index-core/src/federation/: client.rs  config.rs  dispatcher.rs  mod.rs  repos.rs  server.rs  whitelist.rs
tools/code-index-mcp/crates/code-index-core/src/indexer/: config.rs  file_types.rs  hasher.rs  mod.rs
tools/code-index-mcp/crates/code-index-core/src/mcp/: cap.rs  config_watch.rs  mod.rs  tools.rs
tools/code-index-mcp/crates/code-index-core/src/parser/: bsl.rs  go.rs  html.rs  java.rs  javascript.rs  mod.rs  python.rs  rust_lang.rs  text.rs  types.rs  typescript.rs  xml_1c.rs
tools/code-index-mcp/crates/code-index-core/src/storage/: memory.rs  mod.rs  models.rs  pool.rs  schema.rs
tools/code-index-mcp/crates/code-index/src/: main.rs
tools/code-index-mcp/deploy/systemd/: bsl-indexer-daemon.service
tools/code-index-mcp/docs/: PROGRAM_OVERVIEW.md  bsl-indexer-architecture.md  bsl-indexer.md  deploy-vm-rag.md  operations.md
tools/code-index-mcp/docs/фоновый-демон-индексации/: brief.md
tools/code-index-mcp/npm/: README.md  package.json
tools/code-index-mcp/npm/scripts/: postinstall.js
tools/code-index-mcp/scripts/: install-daemon-autostart.ps1  test_phase1_e2e.py
tools/local-llm/: .gitignore  README.md  pyproject.toml
tools/local-llm/src/local_llm_tuner/: __init__.py  cli.py
(+908 files in other folders)
