[workspace]
resolver = "2"
members = [
    "crates/code-index-core",
    "crates/code-index",
    "crates/bsl-extension",
    "crates/bsl-indexer",
]

# Общие метаданные пакетов воркспейса. Каждый крейт может переопределить.
[workspace.package]
version = "0.42.2"
edition = "2021"
license = "MIT"
description = "Rust-native code index MCP server with first-class 1C:Enterprise (BSL) support. Static binary, 31 tools, sub-ms search."

# Общие зависимости — задаём версии один раз, крейты подключают через
# `dep_name = { workspace = true }`. Это исключает рассинхронизацию версий
# между core и любым приватным крейтом, который появится позже
# (`bsl-extension`, `bsl-indexer`).
[workspace.dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# MCP протокол
rmcp = { version = "1.3", features = ["server", "transport-io", "transport-streamable-http-server", "macros"] }

# Парсинг AST
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-onescript = "0.1"
tree-sitter-go = "0.23"
tree-sitter-html = "0.23"

# XML-парсинг (для выгрузок 1С)
quick-xml = "0.37"

# База данных
rusqlite = { version = "0.39", features = ["bundled", "backup", "functions"] }

# Сжатие content code-файлов (Phase 2: file_contents)
zstd = "0.13"

# Сериализация
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Файловая система
walkdir = "2"
rayon = "1.10"
notify = "7"
notify-debouncer-full = "0.4"

# Хеширование
sha2 = "0.10"

# Регулярные выражения (для grep_body REGEXP)
regex = "1"

# Glob-матчинг (для exclude_file_patterns)
globset = "0.4"

# Обработка ошибок
anyhow = "1"
thiserror = "2"

# Логирование
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Системная информация (RAM для in-memory решения)
sysinfo = "0.32"

# Утилиты
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }

# HTTP-сервер демона и клиент
axum = "0.8"
tower = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Конфиг и пути
toml = "0.8"
toml_edit = "0.22"   # запись обратно в daemon.toml с сохранением комментариев и форматирования
dirs = "5"

# Атомарная подмена Arc<...> для горячей перезагрузки конфига
arc-swap = "1"

# Тесты
tempfile = "3"
