[package]
name = "cockpit-app"
version = "0.1.0"
description = "Local GUI wrapper for 1C AI Workbench"
authors = ["1c-ai-workbench contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "cockpit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time"] }

anyhow = "1"
thiserror = "1"

log = "0.4"
env_logger = "0.11"

dirs = "5"
once_cell = "1"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }

walkdir = "2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
futures = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
